1.4.10: June ?, 2008:
 * New suggest-as-you-type feature for creating links.
 * Fixed a bug where typing a space within a link in IE caused the space
   to be added to the end of the link.
 * Backspacing at the end of a link in IE no longer ends the link.

1.4.9: June 25, 2008:
 * When linking to a note by title, the note resolution is now
   case-insensitive instead of case-sensitive.

1.4.8: June 23, 2008:
 * Replaced "add new notebook" link with new notebook button next to
   "notebooks" heading.
 * Reorganized and renamed some notebook links on the right side of the page.

1.4.7: June 21, 2008:
 * New favicon.ico image that looks slightly less dated.

1.4.6: June 18, 2008:
 * New screenshot and new tour shots.

1.4.5: June 18, 2008:
 * You can now resize embedded images (small, medium, or large).
 * Fixed a bug that potentially caused link pulldowns to open in the wrong
   location when the page was scrolled past the top.

1.4.4: June 17, 2008:
 * Links to embedded images now show up within the note tree's list of links.
 * Links to files that have not yet been uploaded (or have been deleted) are
   now excluded from the note tree's list of links.

1.4.3: June 16, 2008:
 * Fixed a bug in which an image thumbnail could not be loaded unless
   you had a valid session. This prevented thumbnails from showing up
   if, for instance, you were reading the Luminotes blog from an RSS
   reader that didn't establish a session.

1.4.2: June 16, 2008:
 * Fixed a bug that caused image files to get deleted if there were multiple
   images embedded within a single note.
 * Prevented a link pulldown from auto-opening by hovering if another
   pulldown is already open.

1.4.1: June 16, 2008:
 * Implemented support for embedded images within wiki notes.
 * You can now open a link pulldown by simply hovering the mouse over a link
   for a few seconds.
 * Tweaked the popup positioning code to prevent popups from getting smashed
   into the right side of the page.