@@ -1,5 +1,6 @@
 1.4.10: June ?, 2008:
- * New suggest-as-you-type feature for creating links.
+ * New suggest-as-you-type feature for creating a new link and setting a
+   link's destination.
  * Fixed a bug where typing a space within a link in IE caused the space
    to be added to the end of the link.
  * Backspacing at the end of a link in IE no longer ends the link.
